--- a/index.html
+++ b/index.html
@@ -1,10 +1,194 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+        <link rel="stylesheet" href="fonts/fonts.css" />
+        <link rel="stylesheet" href="styles/global.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <header class="header">
+            <nav class="header-nav">
+                <ul class="header-nav-list">
+                    <li class="header-nav-list-first-item">главная</li>
+                    <li><a href="#">посмотреть лоты</a></li>
+                    <li><a href="#">об аукционе</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="header-logo">
+
+            </a>
+            <address class="address">
+                <a href="tel:+99995555555">+9 999 555 5555</a>
+                <a href="info@sobaka.ge">info@sobaka.ge</a>
+                <p>наб. Принсенграхт 263- <br> 265, Амстердам</p>
+            </address>
+        </header>
+        <main class="main">
+            <section class="cover">
+                <div class="cover-overlay">
+                    <div class="cover-title">
+                        <h1 class="cover-title-fisrt">Оно</h1>
+                        <h1 class="cover-title-second">Тебе </h1>
+                        <h1 class="cover-title-third">Надо</h1>
+                    </div>
+                    <div class="cover-description">
+                        <p class="cover-description-text">
+                            <span>АУКЦИОН</span>
+                            <span class="space-letter-90">&nbsp;</span>
+                            <span>ВЕЩЕЙ,</span>
+                            <span class="space-letter-80">&nbsp;</span>
+                            <span>В</span>
+                            <span class="space-letter-110">&nbsp;</span>
+                            <span>КОТОРЫЕ</span>
+                            <span class="space-letter-0">&nbsp;</span>
+                            <span>НИКТО</span>
+                            <span class="space-letter-0">&nbsp;</span>
+                            <span>НЕ</span>
+                            <span class="space-letter-0">&nbsp;</span>
+                            <span>ВЕРИЛ</span>
+                        </p>
+                        <button class="bet-button">Сделать ставку</button>
+                    </div>
+                </div>
+            </section>
+            <section class="lots">
+                <h2 class="lots-heading">ЛОТЫ</h2>
+                <ul class="lots-cards">
+                    <li class="lots-card">
+                        <a href="#" class="card-link">
+                            <article class="card card-film">
+                                <div class="card-content">
+                                    <h3 class="card-title">ФИЛЬМ РЕЖИССЁРА,
+                                        КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
+                                    <p class="card-text">Не просто бросил, а
+                                        ушёл с первой лекции. Какой была бы ваша
+                                        ставка, если бы вы не знали, что
+                                        режиссёр — Пол Томас Андерсон?</p>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                    <li class="lots-card">
+                        <a href="#" class="card-link">
+                            <article class="card card-book">
+                                <div class="card-content">
+                                    <h3 class="card-title">КНИГА, ГДЕ ОПИСАН
+                                        ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО
+                                        АГЕНТА</h3>
+                                    <p class="card-text">Объёмом почти в тысячу
+                                        страниц. Иногда без знаков препинания и
+                                        с переходами на древнеанглийский. В ней
+                                        одновременно рассказывается о 16 июня
+                                        1904 года и об истории литературы,
+                                        начиная с античных времён. И это всё
+                                        накладывается на эпическую поэму Гомера.
+                                        Сколько бы вы поставили на «Улисса»
+                                        Джеймса Джойса?</p>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                    <li class="lots-card">
+                        <a href="#" class="card-link">
+                            <article class="card card-picture">
+                                <div class="card-content">
+                                    <h3 class="card-title">КАРТИНА, КОТОРУЮ
+                                        ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ
+                                        ПОДРУГИ</h3>
+                                    <p class="card-text">Ну действительно, там
+                                        линия, тут кружочек, а здесь и вовсе
+                                        что-то похожее на инфузорию-туфельку.
+                                        Никаких полей, лесов, котиков... Сколько
+                                        бы вы на такое поставили, если бы не
+                                        знали, что это — одна из революционных
+                                        работ Кандинского?</p>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                </ul>
+                <div class="lots-more-container">
+                    <a href="#" class="lots-more">посмотреть больше</a>
+                </div>
+            </section>
+            <section class="about">
+                <div class="about-column">
+                    <div class="about-logo">
+                        <img src="images/logo-white.svg"
+                            alt="Логотип аукциона Оно тебе надо"
+                            class="about-logo-image">
+                    </div>
+                </div>
+                <div class="about-column">
+                    <h2 class="about-heading">ОБ АУКЦИОНЕ</h2>
+                    <div class="about-text">
+                        <p class="about-paragraph">
+                            Здесь вы не встретите очередное пафосное собрание
+                            невероятно дорогого антиквариата. Наши лоты вообще
+                            не должны были попасть ни на один аукцион. Потому
+                            что кому нужен дневник девочки-подростка или
+                            картина, которую может нарисовать даже ребёнок? Кому
+                            нужны все эти странные вещи, созданные любителями?
+                        </p>
+                        <p class="about-paragraph">
+                            Слишком сложные или, наоборот, слишком простые.
+                            Опережающие своё время. В пух и прах растерзанные
+                            критиками. Непринятые и непонятые. Когда-то они
+                            казались просто неудачными. Но, несмотря на критику,
+                            кажущуюся простоту или сложность, сейчас без этих
+                            лотов невозможно представить современную культуру.
+                            Когда в эти вещи не верил никто, продолжали верить
+                            их создатели. И сейчас эти лоты стали культовыми.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <address class="footer-address">
+                <a href="tel:+99995555555" class="footer-phone">+9 999 555
+                    5555</a>
+                <a href="mailto:info@sobaka.ge"
+                    class="footer-email">info@sobaka.ge</a>
+                <p class="footer-address-text">наб. Принсенграхт 263-265, <br>
+                    Амстердам</p>
+            </address>
+
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="#"
+                            class="footer-nav-link">главная</a></li>
+                    <li class="footer-nav-item"><a href="#"
+                            class="footer-nav-link">посмотреть лоты</a></li>
+                    <li class="footer-nav-item"><a href="#"
+                            class="footer-nav-link">об аукционе</a></li>
+                </ul>
+            </nav>
+
+            <ul class="footer-social">
+                <li class="footer-social-item">
+                    <a href="#" class="footer-social-link">
+                        <img src="images/yt.svg" alt="YouTube"
+                            class="footer-social-icon">
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="#" class="footer-social-link">
+                        <img src="images/vk.svg" alt="ВКонтакте"
+                            class="footer-social-icon">
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="#" class="footer-social-link">
+                        <img src="images/pinterest.svg" alt="Pinterest"
+                            class="footer-social-icon">
+                    </a>
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
