--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 </ul>
             </nav>
             <a href="#" class="header-logo">
-
+                <img src="images/logo-black.svg"
+                    alt="Логотип аукциона Оно тебе надо"
+                    class="header-logo-image">
             </a>
             <address class="address">
                 <a href="tel:+99995555555">+9 999 555 5555</a>
