--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
             <address class="address">
                 <a href="tel:+99995555555">+9 999 555 5555</a>
-                <a href="info@sobaka.ge">info@sobaka.ge</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 <p>наб. Принсенграхт 263- <br> 265, Амстердам</p>
             </address>
         </header>
