--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
         <header class="header">
             <nav class="header-nav">
                 <ul class="header-nav-list">
-                    <li class="header-nav-list-first-item">главная</li>
-                    <li><a href="#">посмотреть лоты</a></li>
-                    <li><a href="#">об аукционе</a></li>
+                    <li class="header-nav-list-item">
+                        <a href="#"
+                            class="header-nav-link header-nav-link-active">главная</a>
+                    </li>
+                    <li class="header-nav-list-item">
+                        <a href="#" class="header-nav-link">посмотреть лоты</a>
+                    </li>
+                    <li class="header-nav-list-item">
+                        <a href="#" class="header-nav-link">об аукционе</a>
+                    </li>
                 </ul>
             </nav>
             <a href="#" class="header-logo">
@@ -31,29 +38,36 @@
         </header>
         <main class="main">
             <section class="cover">
-                <div class="cover-overlay">
+                <div class="cover-overlay"></div>
+                <div class="cover-content">
                     <div class="cover-title">
-                        <h1 class="cover-title-fisrt">Оно</h1>
-                        <h1 class="cover-title-second">Тебе </h1>
-                        <h1 class="cover-title-third">Надо</h1>
+                        <h1>
+                            <span
+                                class="cover-title-part cover-title-left">ОНО</span>
+                            <span
+                                class="cover-title-part cover-title-center">ТЕБЕ</span>
+                            <span
+                                class="cover-title-part cover-title-right">НАДО</span>
+                        </h1>
                     </div>
                     <div class="cover-description">
                         <p class="cover-description-text">
-                            <span>АУКЦИОН</span>
+                            АУКЦИОН
                             <span class="space-letter-90">&nbsp;</span>
-                            <span>ВЕЩЕЙ,</span>
+                            ВЕЩЕЙ,
                             <span class="space-letter-80">&nbsp;</span>
-                            <span>В</span>
+                            В
                             <span class="space-letter-110">&nbsp;</span>
-                            <span>КОТОРЫЕ</span>
+                            КОТОРЫЕ
                             <span class="space-letter-0">&nbsp;</span>
-                            <span>НИКТО</span>
+                            НИКТО
                             <span class="space-letter-0">&nbsp;</span>
-                            <span>НЕ</span>
+                            НЕ
                             <span class="space-letter-0">&nbsp;</span>
-                            <span>ВЕРИЛ</span>
+                            ВЕРИЛ
                         </p>
-                        <button class="bet-button">Сделать ставку</button>
+                        <button type="button" class="bet-button">Сделать
+                            ставку</button>
                     </div>
                 </div>
             </section>
@@ -63,59 +77,51 @@
                     <li class="lots-card">
                         <a href="#" class="card-link">
                             <article class="card card-film">
-                                <div class="card-content">
-                                    <h3 class="card-title">ФИЛЬМ РЕЖИССЁРА,
-                                        КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
-                                    <p class="card-text">Не просто бросил, а
-                                        ушёл с первой лекции. Какой была бы ваша
-                                        ставка, если бы вы не знали, что
-                                        режиссёр — Пол Томас Андерсон?</p>
-                                </div>
+                                <h3 class="card-title">ФИЛЬМ РЕЖИССЁРА,
+                                    КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
+                                <p class="card-text">Не просто бросил, а
+                                    ушёл с первой лекции. Какой была бы ваша
+                                    ставка, если бы вы не знали, что
+                                    режиссёр — Пол Томас Андерсон?</p>
                             </article>
                         </a>
                     </li>
                     <li class="lots-card">
                         <a href="#" class="card-link">
                             <article class="card card-book">
-                                <div class="card-content">
-                                    <h3 class="card-title">КНИГА, ГДЕ ОПИСАН
-                                        ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО
-                                        АГЕНТА</h3>
-                                    <p class="card-text">Объёмом почти в тысячу
-                                        страниц. Иногда без знаков препинания и
-                                        с переходами на древнеанглийский. В ней
-                                        одновременно рассказывается о 16 июня
-                                        1904 года и об истории литературы,
-                                        начиная с античных времён. И это всё
-                                        накладывается на эпическую поэму Гомера.
-                                        Сколько бы вы поставили на «Улисса»
-                                        Джеймса Джойса?</p>
-                                </div>
+                                <h3 class="card-title">КНИГА, ГДЕ ОПИСАН
+                                    ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО
+                                    АГЕНТА</h3>
+                                <p class="card-text">Объёмом почти в тысячу
+                                    страниц. Иногда без знаков препинания и
+                                    с переходами на древнеанглийский. В ней
+                                    одновременно рассказывается о 16 июня
+                                    1904 года и об истории литературы,
+                                    начиная с античных времён. И это всё
+                                    накладывается на эпическую поэму Гомера.
+                                    Сколько бы вы поставили на «Улисса»
+                                    Джеймса Джойса?</p>
                             </article>
                         </a>
                     </li>
                     <li class="lots-card">
                         <a href="#" class="card-link">
                             <article class="card card-picture">
-                                <div class="card-content">
-                                    <h3 class="card-title">КАРТИНА, КОТОРУЮ
-                                        ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ
-                                        ПОДРУГИ</h3>
-                                    <p class="card-text">Ну действительно, там
-                                        линия, тут кружочек, а здесь и вовсе
-                                        что-то похожее на инфузорию-туфельку.
-                                        Никаких полей, лесов, котиков... Сколько
-                                        бы вы на такое поставили, если бы не
-                                        знали, что это — одна из революционных
-                                        работ Кандинского?</p>
-                                </div>
+                                <h3 class="card-title">КАРТИНА, КОТОРУЮ
+                                    ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ
+                                    ПОДРУГИ</h3>
+                                <p class="card-text">Ну действительно, там
+                                    линия, тут кружочек, а здесь и вовсе
+                                    что-то похожее на инфузорию-туфельку.
+                                    Никаких полей, лесов, котиков... Сколько
+                                    бы вы на такое поставили, если бы не
+                                    знали, что это — одна из революционных
+                                    работ Кандинского?</p>
                             </article>
                         </a>
                     </li>
                 </ul>
-                <div class="lots-more-container">
-                    <a href="#" class="lots-more">посмотреть больше</a>
-                </div>
+                <a href="#" class="lots-more">посмотреть больше</a>
             </section>
             <section class="about">
                 <div class="about-column">
@@ -151,19 +157,16 @@
             </section>
         </main>
         <footer class="footer">
-            <address class="footer-address">
-                <a href="tel:+99995555555" class="footer-phone">+9 999 555
-                    5555</a>
-                <a href="mailto:info@sobaka.ge"
-                    class="footer-email">info@sobaka.ge</a>
-                <p class="footer-address-text">наб. Принсенграхт 263-265, <br>
-                    Амстердам</p>
+            <address class="address">
+                <a href="tel:+99995555555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <p>наб. Принсенграхт 263-265, <br> Амстердам</p>
             </address>
 
             <nav class="footer-nav">
                 <ul class="footer-nav-list">
                     <li class="footer-nav-item"><a href="#"
-                            class="footer-nav-link">главная</a></li>
+                            class="footer-nav-link footer-nav-link-active">главная</a></li>
                     <li class="footer-nav-item"><a href="#"
                             class="footer-nav-link">посмотреть лоты</a></li>
                     <li class="footer-nav-item"><a href="#"
